[package]
name = "koerier"
version = "1.1.0"
edition = "2024"
authors = ["Luis Schwab <luisschwab@protonmail.com"]
description = "A self-hosted lightning address server for LND"
license = "MIT"
repository = "https://github.com/luisschwab/koerier"
readme = "README.md"
keywords = ["bitcoin", "lightning", "lnd", "webserver"]

[[bin]]
name = "koerier"
path = "src/koerier.rs"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
hex = "0.4.3"
image = "0.25.8"
log = "0.4.29"
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "macros"] }
toml = "0.9.11"
