[package]
name = "koerier"
version = "1.1.0"
edition = "2024"
authors = ["Luis Schwab <luisschwab@protonmail.com"]
description = "A self-hosted lightning address server for LND"
license = "MIT"
repository = "https://github.com/luisschwab/koerier"
readme = "README.md"
keywords = ["bitcoin", "lightning", "lnd", "webserver"]

[[bin]]
name = "koerier"
path = "src/koerier.rs"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
hex = "0.4.3"
image = "0.25.9"
log = "0.4.29"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "macros"] }
toml = "1.0.3"
